Fix Cards img and add text-truncate

--- a/styles.css
+++ b/styles.css
@@ -155,13 +155,18 @@ header nav ul li a:hover{
 
 /*   MEDIA QUERY  */
 
-@media (max-width: 576px) { 
-    #useful img{
-      height:40vw;
-    }
+@media (min-width:768px) and (max-width:1199px) { 
+  #useful img{
+    height:20vw;
+  }
+
 }
 
 @media (max-width: 767.98px) {
+  #useful img{
+    height:35vw;
+  }
+
   header nav{
     width : 100%;
     height: 75px;
@@ -213,14 +218,6 @@ header nav ul li a:hover{
 .list-group ul{
   border: none;
 }
-
-.box {
-  /*display: flex;
-  /*align-items: stretch;*/
-  /*justify-content: center;*/
-  /*flex-direction: column;*/
-}
-
 
 #access .fa-bus, #access .fa-train{
   background-color: #eaeaea;
